feat: fetch actions with full typegen

--- a/fetch-actions/package.json
+++ b/fetch-actions/package.json
@@ -11,11 +11,23 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/db": "^0.10.0",
     "@astrojs/mdx": "^2.2.3",
+    "@astrojs/react": "^3.1.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
     "astro": "^4.5.15",
+    "astro-integration-kit": "^0.8.0",
+    "es-module-lexer": "^1.5.0",
+    "fast-glob": "^3.3.2",
+    "react": "18.3.0-canary-670811593-20240322",
+    "react-dom": "18.3.0-canary-670811593-20240322",
     "typescript": "^5.4.3",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "vite": "^5.2.8"
   }
 }
