--- a/rpc-actions/package.json
+++ b/rpc-actions/package.json
@@ -16,6 +16,7 @@
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.2",
     "astro": "^4.5.16",
+    "astro-integration-kit": "^0.9.0",
     "typescript": "^5.4.4",
     "zod": "^3.22.4"
   }
